--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,9 @@ body {
 		text-wrap: balance;
 	}
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
+* {
+	font-family: "Poppins", sans-serif;
+}
