--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,12 @@ body {
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap");
 
 * {
 	font-family: "Poppins", sans-serif;
+}
+
+.font-saraban {
+	font-family: "Sarabun", sans-serif;
 }
